--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <input class="form-check-input" type="checkbox" value="" id="addFrameButtons">
                 <label class="form-check-label" for="addFrameButtons">Add frame buttons for bounds swap</label>
             </div>
-            <div class="form-check">
+            <div class="form-check" style="display: none;" id="MLPToolbar">
                 <input class="form-check-input" type="checkbox" value="" id="mlpToolbar">
                 <label class="form-check-label" for="mlpToolbar">Display MLP toolbar</label>
             </div>
