--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/t42bootstrap.bundle.css">
+    <link rel="stylesheet" href="./node_modules/@glue42/theme/dist/t42bootstrap.bundle.css">
     <link rel="stylesheet" href="./styling/style.css">
     <title>Auto Arrange App</title>
 </head>
@@ -31,10 +31,7 @@
                 <input class="form-check-input" type="checkbox" value="" id="onlyNormal">
                 <label class="form-check-label" for="onlyNormal">Only windows in 'normal' state</label>
             </div>
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="addFrameButtons">
-                <label class="form-check-label" for="addFrameButtons">Add frame buttons for bounds swap</label>
-            </div>
+            
             <div class="form-check" style="display: none;" id="MLPToolbar">
                 <input class="form-check-input" type="checkbox" value="" id="mlpToolbar">
                 <label class="form-check-label" for="mlpToolbar">Display MLP toolbar</label>
