Addint fixes to html and autoArrange

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
             <div class="form-group">
                 <label for="screens">Arrange on specific display</label>
-                <select class="form-control" id="screens">
+                <select multiple class="form-control" id="screens">
                 </select>
             </div>
             <div class="form-check">
